# guile-smt

./: Makefile.am  README.org  configure.ac  guix.scm  smt.sld
.github/workflows/: build.yml
build-aux/: guile.am
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
smt/: aux.sld  db.sld  instance.sld  proof.sld  types.sld
smt/db/: gdbm.sld
smt/hash/bn254/: poseidon2.sld
smt/instance/: bn254.sld
smt/instance/bn254/: poseidon2.sld
